--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
   <div class="container">
     <div class="header">
-      <h1><span class="gradient-text">Removify</span> <span>AI Background Remover</span></h1>
+      <h1>Removify</h1>
+      <h1><span>AI Background Remover</span></h1>
       <p class="subtitle">Upload an image to instantly remove the background with AI</p>
     </div>
 
